--- a/styles/lazy-styles.scss
+++ b/styles/lazy-styles.scss
@@ -1204,7 +1204,7 @@
     position: relative;
     flex-direction: column;
     gap: 40px;
-    padding-bottom: 80px;
+    // padding-bottom: 80px;
 
 
     .welcomemain-sub1 {
